2006-06-27  Sven Neumann  <sven@gimp.org>

	* app/config/gimprc-blurbs.h (NUM_PROCESSORS_BLURB): simplified.

	* app/config/gimpguiconfig.c: changed default window hints back to
	"normal". Fixes bug #344242.

2006-06-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/gfig/gfig-dialog.[ch]
	* plug-ins/gfig/gfig-dobject.h
	* plug-ins/gfig/gfig.[ch]: put extern variables where they belong.
	Patch from Daniel Richard G. (bug #342455).

2006-06-27  Sven Neumann  <sven@gimp.org>

	Based on a patch from Zbigniew Chyla:

	* app/core/gimpunit.c (_gimp_unit_get_singular, _gimp_unit_get_plural):
	don't call gettext() on strings returned by _gimp_unit_get_user_unit().

2006-06-27  Sven Neumann  <sven@gimp.org>

	Applied patch from Zbigniew Chyla:

	* app/gimp-intl.h
	* libgimp/stdplugins-intl.h: removed most content and include
	<glib/gi18n.h> instead.

	* libgimp/libgimp-intl.h: define ngettext() macro as wrapper around
	dngettext().

2006-06-27  Sven Neumann  <sven@gimp.org>

	I18n improvements based on a patch from Zbigniew Chyla:

	* app/main.c:
	* modules/controller_midi.c
	* plug-ins/script-fu/scripts/guides-new.scm: marked strings for
	translation.

	* app/widgets/gimpdock.c
	* libgimpwidgets/gimppageselector.c
	* plug-ins/common/plugin-browser.c: use ngettext() for plural forms.

2006-06-27  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpexport.c (gimp_export_image): use NULL as the
	special value, not "silent".

	* plug-ins/print/print-draw-page.c: changed accordingly.  Also
	fixed handling of filename encoding.

2006-06-26  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* libgimp/gimpexport.c: if format arg is "silent", export
	without popping a dialog -- saves duplicating code.

	* plug-ins/print/print-draw-page.c
	* plug-ins/print/print-draw-page.h
	* plug-ins/print/print-page-layout.c
	* plug-ins/print/print-page-layout.h
	* plug-ins/print/print-settings.c
	* plug-ins/print/print-settings.h
	* plug-ins/print/print.h:         new files	

	* plug-ins/print/Makefile.am