@@ -1,5 +1,9 @@
 2006-06-27  Sven Neumann  <sven@gimp.org>
 
+	* app/tools/gimpalignoptions.c: removed unused includes and stubs.
+
+2006-06-27  Sven Neumann  <sven@gimp.org>
+
 	* app/config/gimprc-blurbs.h (NUM_PROCESSORS_BLURB): simplified.
 
 	* app/config/gimpguiconfig.c: changed default window hints back to
